all code for animantion behind log and logo text are commented as it is not working correctly in some smart phones eg. Iphone 11pro max

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,8 +58,14 @@ h3 {
 /* navigation bar */
 .my-navbar-bg {
   background: var(--bg-color1);
-  /* padding: 0; */
-  padding-right: 0.5rem;
+  padding: 0 2rem 3px;
+}
+
+@media screen and (max-width: 500px) {
+  .my-navbar-bg {
+    padding: 0 0.5rem 3px;
+    /* it because due to long logo text, there may not be enough space for toggle icon */
+  }
 }
 
 .my-navbar-header {
@@ -116,14 +122,6 @@ h3 {
 }
 
 /* ========================================================== text animantion */
-.neon-wrapper {
-  height: 100%;
-  align-items: center;
-  background-color: var(--col-heavy);
-  padding: 0.5rem 1rem 0.5rem 0.5rem;
-  left: 2rem;
-}
-
 .logo-txt {
   color: var(--col-light);
   font-size: 25px;
@@ -131,14 +129,23 @@ h3 {
   font-family: var(--font2);
 }
 
-.logo-txt::before {
+/* text animation part is commented for now as it is not working correctly in few smart phone eg. Iphone 11Pro max */
+
+/* .logo-txt::before {
   content: "ABC Restaurant";
   position: absolute;
   mix-blend-mode: difference;
   filter: blur(2px);
-}
+} */
+/* .neon-wrapper {
+  height: 100%;
+  align-items: center;
+  background-color: var(--col-heavy);
+  padding: 0.5rem 1rem 0.5rem 0.5rem;
+  left: 2rem;
+} */
 
-.gradient {
+/* .gradient {
   background: linear-gradient(
     114.5793deg,
     rgb(121, 122, 121) 48.92708%,
@@ -150,32 +157,29 @@ h3 {
   width: 100%;
   height: 100%;
   mix-blend-mode: multiply;
-}
+} */
 
-.dodge {
+/* .dodge {
   background: radial-gradient(circle, white, #292b2c 35%) center/25% 25%;
   position: absolute;
   top: -100%;
   left: -100%;
   right: 0;
   bottom: 0;
-  /* z-index: -1; */
-
   mix-blend-mode: color-dodge;
   animation: dodge-area 2s linear infinite;
-}
+} */
 
-@keyframes dodge-area {
-  to {
-    /* transform: translateX(50%); */
-    transform: translate(50%, 2%);
+/* @keyframes dodge-area {
+  to {    
+    transform: translate(50%, 50%);
   }
-}
-.neon-wrapper {
+} */
+/* .neon-wrapper {
   display: inline-flex;
   filter: brightness(130%);
   overflow: hidden;
-}
+} */
 /* ========================================================== footer  */
 #my-footer {
   background: var(--bg-color1);
